--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <img src="assets/img/portfolio/portfolio_2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Title </h4>
-              <p>Description</p>
+              <p>Descriptions</p>
               <!-- <a href="assets/img/portfolio/portfolio_2.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
