Updates and fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/tac_logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/tac_logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -163,7 +163,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/about-boxes-1.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/image_mission.JPG" class="card-img-top" alt="...">
               <!-- <div class="card-icon">
                 <i class="ri-brush-4-line"></i>
               </div> -->
@@ -191,7 +191,7 @@
           </div> -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/about-boxes-3.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/vission.jpeg" class="card-img-top" alt="...">
               <!-- <div class="card-icon">
                 <i class="ri-movie-2-line"></i>
               </div> -->
