Updates and fixes and images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-up" data-aos-delay="150">
       <h1>Plan. Design. Build.</h1>
-      <h2>Your first place for design</h2>
+      <h2>'The Art of Creating'</h2>
 
     </div>
   </section><!-- End Hero -->
@@ -118,7 +118,7 @@
         <div class="row align-items-center">
 
           <div class="col-lg-6 video-box align-self-baseline" data-aos="zoom-in" data-aos-delay="100">
-            <img src="assets/img/intro_img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/image_header_temp.JPG" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content ">
