--- a/index.html
+++ b/index.html
@@ -71,6 +71,45 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
+
+
+        <div class="row align-items-center">
+
+          <div class="col-lg-6 video-box align-self-baseline" data-aos="zoom-in" data-aos-delay="100">
+            <img src="assets/img/image_header_temp.JPG" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 pt-3 pt-lg-0 content ">
+            <h3>“Architecture is a tactful art of personalizing
+              living spaces as Architecture is an outcome of
+              an intellectual discussion between client and
+              a designer.” </h3>
+            <!-- <div class="by-tag">
+              <p>- Abdul Raaz <br><span style="font-size: 12px;">The Architecture Company</span></p>
+            </div> -->
+            <p class="fst-italic">
+              A company started by Four architects, with a thriving thought of exercising
+              architecture with the utmost thought and sculpting ideas into reality with an appropriate technical
+              execution team and collaborators building timeless masterpieces without compromising quality and client
+              convenience.
+            </p>
+            <!-- <ul>
+              <li><i class="bx bx-check-double"></i> 100 % client satisfaction</li>
+              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
+              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
+                pariatur.</li>
+            </ul> -->
+            <!-- <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum
+            </p> -->
+          </div>
+
+        </div>
         <div class="row justify-content-end">
           <div class="col-lg-11">
             <div class="row justify-content-end">
@@ -113,44 +152,6 @@
 
             </div>
           </div>
-        </div>
-
-        <div class="row align-items-center">
-
-          <div class="col-lg-6 video-box align-self-baseline" data-aos="zoom-in" data-aos-delay="100">
-            <img src="assets/img/image_header_temp.JPG" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-6 pt-3 pt-lg-0 content ">
-            <h3>“Architecture is a tactful art of personalizing
-              living spaces as Architecture is an outcome of
-              an intellectual discussion between client and
-              a designer.” </h3>
-            <!-- <div class="by-tag">
-              <p>- Abdul Raaz <br><span style="font-size: 12px;">The Architecture Company</span></p>
-            </div> -->
-            <p class="fst-italic">
-              A company started by Four architects, with a thriving thought of exercising
-              architecture with the utmost thought and sculpting ideas into reality with an appropriate technical
-              execution team and collaborators building timeless masterpieces without compromising quality and client
-              convenience.
-            </p>
-            <!-- <ul>
-              <li><i class="bx bx-check-double"></i> 100 % client satisfaction</li>
-              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                pariatur.</li>
-            </ul> -->
-            <!-- <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p> -->
-          </div>
-
         </div>
 
       </div>
@@ -665,9 +666,9 @@
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/ta-c/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
