Updates and fixes

--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@
                 <h4>Mohammed Shiham Khader</h4>
                 <span>Architect</span>
                 <div class="social">
-
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://instagram.com/shiham_khader/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/mohammed-shiham-khader-b00698230"><i
+                      class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -666,7 +666,8 @@
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-                <a href="" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://instagram.com/thearchitecture.company/" class="instagram"><i
+                    class="bx bxl-instagram"></i></a>
                 <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
                 <a href="https://www.linkedin.com/company/ta-c/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
