--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@
     <!-- ======= About Boxes Section ======= -->
     <section id="about-boxes" class="about-boxes">
       <div class="container" data-aos="fade-up">
-
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
@@ -211,39 +210,39 @@
     </section><!-- End About Boxes Section -->
 
     <!-- ======= Clients Section ======= -->
-    <!-- <section id="clients" class="clients">
+    <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
         <div class="row">
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client2.gif" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client3.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client4.jpeg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client5.jpeg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client6.jpeg" class=" img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client7.jpeg" class="img-fluid" alt="">
           </div>
 
         </div>
 
-      </div> -->
-    <!-- </section> -->
+      </div>
+    </section>
     <!-- End Clients Section -->
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
