Added new phone number and whatssapp link

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
               <div class="info-box mt-4">
                 <i class="bx bx-phone-call"></i>
                 <h3>Call Us</h3>
-                <p>+91 7019694957</p>
+                <p>+91 9900438899</p>
               </div>
             </div>
           </div>
@@ -659,13 +659,13 @@
               <h3>THE ARCHITECTURE COMPANY</h3>
               <p>
                 Millennium Towers, Mother Theresa Rd, Kankanady, Mangaluru, Karnataka 575002<br><br>
-                <strong>Phone:</strong>+91 7019694957<br>
+                <strong>Phone:</strong>+91 9900438899<br>
                 <strong>Email:</strong> <a href="mailto:info@thearchitecture.company"
                   style="color: #fff">info@thearchitecture.company</a><br>
               </p>
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-                <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+                <a href="https://wa.me/message/CVPHY527FOR3M1" class="facebook"><i class="bx bxl-whatsapp"></i></a>
                 <a href="https://instagram.com/thearchitecture.company/" class="instagram"><i
                     class="bx bxl-instagram"></i></a>
                 <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
