--- a/ramdan.html
+++ b/ramdan.html
@@ -37,13 +37,13 @@
     <header id="header" style="background: rgba(21, 34, 43, 0.85);">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html">THE ARCHITECTURE COMPANY</a></h1>
+            <h1 class="logo"><a href="https://thearchitecture.company/">THE ARCHITECTURE COMPANY</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto" href="index.html#hero">Home</a></li>
+                    <li><a class="nav-link scrollto" href="https://thearchitecture.company/">Home</a></li>
                     <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
                     <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
                     <li><a class="nav-link scrollto " href="index.html#portfolio">Portfolio</a></li>
